src/test/ui/issue-14227.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/issue-14227.rs:16:20
   |
LL | static CRASH: () = symbol;
   |                    ^^^^^^ tried to read from foreign (extern) static

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
